feat: OTP screen with tests + Expo SDK 52

--- a/app.json
+++ b/app.json
@@ -20,10 +20,21 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "package": "com.sakinfens.otpdemo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a39f750e-6aad-458c-9e90-41301d028b11"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/a39f750e-6aad-458c-9e90-41301d028b11"
     }
   }
 }
